objects/Case.object
<CustomObject>
    <fields>
        <fullName>Contact_Email_ETB__c</fullName>
        <description>Used this field in Case Notification Email Templates</description>
        <formula>IF(ISBLANK(Contact_Email__c),IF(ISBLANK(AE_Contact_Email__c),SuppliedEmail,AE_Contact_Email__c),Contact_Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email ETB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Employee_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Employee Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_FullName_ETB__c</fullName>
        <description>This Field used in Email Template Body for Case Notificiations</description>
        <formula>IF(ISBLANK(ContactFullName__c),IF(ISBLANK(AEContactFullName__c),&apos;Cadence Support&apos;,AEContactFullName__c),ContactFullName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact FullName ETB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Geography__c</fullName>
        <formula>TEXT(Contact.Geography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Support_Level__c</fullName>
        <description>Support Level Derived From Contact</description>
        <label>Contact Support Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date_DO_NOT_USE__c</fullName>
        <description>For TESTING ONLY</description>
        <label>Create Date - DO NOT USE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_CST_Hours__c</fullName>
        <formula>IF(VALUE(MID(TEXT(CreatedDate),12,2)) - 5&lt; 0 ,VALUE(MID(TEXT(CreatedDate),12,2)) - 5+24,VALUE(MID(TEXT(CreatedDate),12,2)) - 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created CST Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Hours__c</fullName>
        <label>Created Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Transition__c</fullName>
        <description>This field will be used to show the value of the Case&apos;s Customer Project if available. If not, it will show the value of the associated CCRs Customer Project. If both are blank, it will have no value.</description>
        <formula>IF( 
Project__c = null, 
CCR__r.Cust_Project__c, 
Project__c 
)</formula>
        <label>Customer Project Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Project__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project__c.Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>5_1 - Data Steward, Integration, System Administrator Custom, 5_2_Support Administrator</value>
            </filterItems>
            <filterItems>
                <field>$Source.Trigger_Bypass__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <picklist>
            <picklistValues>
                <fullName>happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annoyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>frustrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DIP_Delivery_Package__c</fullName>
        <label>DIP Delivery Package</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Databahn_Project_Expiry_Date__c</fullName>
        <description>TIP Databahn Expiry Date</description>
        <formula>Contact.TIP_Project_End_Date__c</formula>
        <label>TIP Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Databahn_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Databahn Project</label>
        <referenceTo>IP_Config__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delay_Assignment_Date__c</fullName>
        <description>Time to re-evaluate after delay for case assignment.</description>
        <inlineHelpText>Time to re-evaluate after delay for case assignment.</inlineHelpText>
        <label>Delay Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delay_Created_Date__c</fullName>
        <label>Delay Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delay_Notifier_Trigger_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>This field will store the time based on which the Delay notifier is fired.</description>
        <label>Delay Notifier Trigger Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delay_Notifier_Type__c</fullName>
        <formula>IF( 
OR ( 
RecordType.DeveloperName == &apos;VIP&apos;, 
RecordType.DeveloperName == &apos;DIP&apos;, 
OwnerId == &apos;00Gd0000001aeRZ&apos;, 
OwnerId == &apos;00Gd0000001aeT6&apos;), 
24, 
2 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delay Notifier Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachments__c</fullName>
        <description>Names for attachments that deleted</description>
        <label>Attachments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>To store case description in Rich Text</description>
        <label>Case Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detailed_Work_Performed__c</fullName>
        <label>Detailed Work Performed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_not_forward_attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not forward attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2E__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not used</description>
        <label>E2E</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_to_Child_Case_Info__c</fullName>
        <label>Email to Child Case Info</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_TB_Notifications__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sets the Time-Based Notification to True/False</description>
        <label>Enable TB Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enterprise_Project_Name__c</fullName>
        <label>Enterprise/Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <formula>Entitlement.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <label>Escalation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Arrival__c</fullName>
        <label>Expected Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_Closed_Case_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired Closed Case Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FAE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be populate from Contact FAE or Account FAE else Parent Account FAE</description>
        <label>Tensilica FAE</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSR_Status__c</fullName>
        <label>FSR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Failure_Code_Second_Level__c</fullName>
        <label>Failure Code Second Level</label>
        <picklist>
            <controllingField>Failure_Code__c</controllingField>
            <picklistValues>
                <fullName>27V Path</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bootup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bracket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contaminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrosion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead on Arrival</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIMMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down Rev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoses</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Failure_Code_Third_Level__c</fullName>
        <label>Failure Code Third Level</label>
        <picklist>
            <controllingField>Failure_Code_Second_Level__c</controllingField>
            <picklistValues>
                <fullName>ABIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrosion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCC_CON1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCC_CON2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCC_CON3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dcc_con 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCC_MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>down rev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earthquake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>filler tank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fittings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>heat exchanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi/Lo Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HiPot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <label>Failure Code</label>
        <picklist>
            <picklistValues>
                <fullName>12V PSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24V PSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27V PSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Plane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffer Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffer Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clock Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down Rev Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interposer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <label>First Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GS_Owner_Name__c</fullName>
        <description>Owner Name for Global Search</description>
        <inlineHelpText>Owner Name for Global Search</inlineHelpText>
        <label>Global Seach Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HFE_Resolution__c</fullName>
        <label>HFE Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field look up to User Object</description>
        <label>Hidden Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical_Last_Modified_By__c</fullName>
        <label>Historical Last Modified By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Last_Modified_Date__c</fullName>
        <label>Historical Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <formula>SVMXC__Component__r.Host_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPGExceptionNotes__c</fullName>
        <label>IPGExceptionNotes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoming_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incoming Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if Release Schedule pages, Patches, Platform Support Matrix, or other Installation web pages are used in resolving this case.</description>
        <inlineHelpText>Select if Release Schedule pages, Patches, Platform Support Matrix, or other Installation web pages are used in resolving this case.</inlineHelpText>
        <label>Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Status__c</fullName>
        <formula>TEXT( SVMXC__Component__r.SVMXC__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Priority__c</fullName>
        <label>Internal Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Occurrence_Date__c</fullName>
        <label>Issue Occurrence Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JIRA_Comment__c</fullName>
        <inlineHelpText>Enter a comment to be appended to JIRA Issue.</inlineHelpText>
        <label>JIRA Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Issue_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JIRA Issue Key</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Cases (JIRA Issue Key)</relationshipLabel>
        <relationshipName>Cases_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JIRA_Planned_Release_Date__c</fullName>
        <label>JIRA Planned Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JIRA_Status__c</fullName>
        <label>JIRA Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Junk_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Cases marked as SPAM</description>
        <inlineHelpText>Check the box if the incoming Email to case is SPAM</inlineHelpText>
        <label>Junk Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kanji_Account__c</fullName>
        <formula>Contact.Kanji_Account_Name__c</formula>
        <label>Kanji Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Name__c</fullName>
        <formula>Contact.Kanji_Name__c</formula>
        <label>Kanji Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Close_Class__c</fullName>
        <description>Select Knowledge action applicable to this Case in order of priority from top.</description>
        <inlineHelpText>Select Knowledge action applicable to this Case in order of priority from top.</inlineHelpText>
        <label>Knowledge Close Class</label>
        <picklist>
            <picklistValues>
                <fullName>Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuse Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuse Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inarticulate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastOwnerAssignementDate__c</fullName>
        <label>LastOwnerAssignementDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Contacted__c</fullName>
        <label>Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_DO_NOT_USE__c</fullName>
        <description>FOR TESTING ONLY - DELETE FOR Golive</description>
        <label>Last Modified Date - DO NOT USE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Notification_Date__c</fullName>
        <defaultValue>Now()+ 7 - 1/24</defaultValue>
        <label>Last Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Issue_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Issue ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country_Picklist__c</fullName>
        <label>Location Country Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <formula>Text(SVMXC__Site__r.SVMXC__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Zip</label>
        <type>Text</type>
    </fields>
</CustomObject>